# cafemod

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cafemode/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/judini/cafemode/: MainActivity.kt
app/src/main/java/com/judini/cafemode/receiver/: BootReceiver.kt
app/src/main/java/com/judini/cafemode/service/: AudioEffectWrapper.kt  CafeModeService.kt
app/src/main/jni/: Android.mk  CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ic_cafe.xml  ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: audio_effects.xml
app/src/test/java/com/example/cafemode/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
